// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for book should render a book with title 'Harry Potter and the Sorcerers stone' 1`] = `
<div
  className="single-book"
  id="f32i30htrngf"
  onClick={[Function]}
>
  <img
    alt="\`SOME book cover"
    src="urlforimage.com"
  />
  <p
    className="title"
  >
    Harry Potter and the Sorcerers stone
  </p>
  <p
    className="author"
  >
    by 
    J. K. Rowling
  </p>
</div>
`;

exports[`Snapshot test of UserForm when props.isLoginForm=false should render with an <h3> with text 'Register user', and a field for confirming password 1`] = `
<div>
  <button
    className="red-button"
    id="popup-close-button"
    onClick={[Function]}
  >
    <MdClose
      size="20px"
    />
  </button>
  <h3>
    Register user
  </h3>
  <form>
    <label>
      Username
    </label>
    <input
      id="username-input"
      name="username"
      onChange={[Function]}
      placeholder="Type username"
      required={true}
      type="text"
      value=""
    />
    <br />
    <label>
      Password
    </label>
    <input
      id="password-input"
      name="password"
      onChange={[Function]}
      placeholder="Type password"
      required={true}
      type="password"
      value=""
    />
    <br />
    <React.Fragment>
      <label>
        Confirm password
      </label>
      <input
        id="confirm-password-input"
        name="confirm-password"
        onChange={[Function]}
        placeholder="Type password again"
        required={true}
        type="password"
        value=""
      />
    </React.Fragment>
    <br />
    <b>
      
    </b>
    <br />
    <input
      className="red-button"
      onClick={[Function]}
      type="submit"
    />
  </form>
</div>
`;

exports[`Snapshot test of UserForm when props.isLoginForm=true should render with an <h3> with text 'Sign in', and no field for confirming password 1`] = `
<div>
  <button
    className="red-button"
    id="popup-close-button"
    onClick={[Function]}
  >
    <MdClose
      size="20px"
    />
  </button>
  <h3>
    Sign in
  </h3>
  <form>
    <label>
      Username
    </label>
    <input
      id="username-input"
      name="username"
      onChange={[Function]}
      placeholder="Type username"
      required={true}
      type="text"
      value=""
    />
    <br />
    <label>
      Password
    </label>
    <input
      id="password-input"
      name="password"
      onChange={[Function]}
      placeholder="Type password"
      required={true}
      type="password"
      value=""
    />
    <br />
    <br />
    <b>
      
    </b>
    <br />
    <input
      className="red-button"
      onClick={[Function]}
      type="submit"
    />
  </form>
</div>
`;

exports[`Snapshot test of UserHandling when displayRegisterForm=false should render a userForm containing the text 'Don't have a user? Create one!', and a button with the text 'Create new user' 1`] = `
<div
  id="userHandling"
>
  <React.Fragment>
    <UserForm
      isLoginForm={true}
      toggleForm={[Function]}
    />
    Don't have a user? Create one!
    <button
      className="red-button"
      id="userHandlingRegister"
      onClick={[Function]}
    >
      Create new user
    </button>
  </React.Fragment>
</div>
`;

exports[`Snapshot test of UserHandling when displayRegisterForm=true should render a userForm containing the text 'Already got a user? Sign in below!', and a button with the text 'Sign in to existing user' 1`] = `
<div
  id="userHandling"
>
  <React.Fragment>
    <UserForm
      isLoginForm={false}
      toggleForm={[Function]}
    />
    Already got a user? Sign in below!
    <button
      className="red-button"
      id="userHandlingLogin"
      onClick={[Function]}
    >
      Sign in to existing user
    </button>
  </React.Fragment>
</div>
`;

exports[`Snapshot test of reducer should give loginStatus true 1`] = `
Object {
  "loginStatus": true,
}
`;
